{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 52,
  "lineage": "94c8e550-33b6-b72e-d8c9-e6ce41ce4d7a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fithealth2jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024c319d5d14b463e",
            "arn": "arn:aws:ec2:ap-south-1:227218640239:instance/i-0c39624a889313410",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c39624a889313410",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fithealth2kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ee8b8c827f33e1b5",
            "private_dns": "ip-10-0-3-112.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.112",
            "public_ip": "65.0.103.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d6e6f48eda4d27b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c3c6d3ad64ea6bf",
            "tags": {
              "Name": "fithealth2jumpbox"
            },
            "tags_all": {
              "Name": "fithealth2jumpbox"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0929626bdf7368461"
            ]
          },
          "dependencies": [
            "aws_key_pair.fithealth2kp",
            "aws_security_group.fithealth2jumpboxsg",
            "aws_subnet.fithealth2pubsn3",
            "aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fithealth2ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:internet-gateway/igw-0eba3a644816d013d",
            "id": "igw-0eba3a644816d013d",
            "owner_id": "227218640239",
            "tags": {
              "Name": "fithealth2ig"
            },
            "tags_all": {
              "Name": "fithealth2ig"
            },
            "vpc_id": "vpc-05c14074ef654cd67"
          },
          "dependencies": [
            "aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fithealth2igrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:route-table/rtb-0dc0a970209a61dd1",
            "id": "rtb-0dc0a970209a61dd1",
            "owner_id": "227218640239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eba3a644816d013d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fithealth2igrt"
            },
            "tags_all": {
              "Name": "fithealth2igrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c14074ef654cd67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fithealth2ig",
            "aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fithealth2igrtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044c3aeda6bb9169d",
            "route_table_id": "rtb-0dc0a970209a61dd1",
            "subnet_id": "subnet-03c3c6d3ad64ea6bf"
          },
          "dependencies": [
            "aws_internet_gateway.fithealth2ig",
            "aws_route_table.fithealth2igrt",
            "aws_subnet.fithealth2pubsn3",
            "aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fithealth2jumpboxsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:security-group/sg-0929626bdf7368461",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0929626bdf7368461",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221107172446535000000002",
            "name_prefix": "terraform-",
            "owner_id": "227218640239",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c14074ef654cd67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fithealth2rdssg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:security-group/sg-085997d9b93cea19b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085997d9b93cea19b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20221107172446535000000001",
            "name_prefix": "terraform-",
            "owner_id": "227218640239",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c14074ef654cd67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fithealth2prvsn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:subnet/subnet-0c7e7d30b1855c410",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7e7d30b1855c410",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "227218640239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fithealth2prvsn1"
            },
            "tags_all": {
              "Name": "fithealth2prvsn1"
            },
            "vpc_id": "vpc-05c14074ef654cd67"
          },
          "dependencies": [
            "aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fithealth2prvsn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:subnet/subnet-0bd46fe5113db7a05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd46fe5113db7a05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "227218640239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fithealth2prvsn2"
            },
            "tags_all": {
              "Name": "fithealth2prvsn2"
            },
            "vpc_id": "vpc-05c14074ef654cd67"
          },
          "dependencies": [
            "aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fithealth2pubsn3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:subnet/subnet-03c3c6d3ad64ea6bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c3c6d3ad64ea6bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "227218640239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fithealth2pubsn3"
            },
            "tags_all": {
              "Name": "fithealth2pubsn3"
            },
            "vpc_id": "vpc-05c14074ef654cd67"
          },
          "dependencies": [
            "aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fithealth2vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:vpc/vpc-05c14074ef654cd67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4dd3f6ff360e11b",
            "default_route_table_id": "rtb-049d9840d7d839de3",
            "default_security_group_id": "sg-0f8a76ce97268a477",
            "dhcp_options_id": "dopt-071ca8a68c61ad0a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c14074ef654cd67",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-049d9840d7d839de3",
            "owner_id": "227218640239",
            "tags": {
              "Name": "fithealth2vpc"
            },
            "tags_all": {
              "Name": "fithealth2vpc"
            }
          }
        }
      ]
    }
  ]
}